[package]
name = "sacrament"
version = "0.1.0"
edition = "2026"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
crossterm = "0.29.0"
notify = "8.2.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "parsing", "regex-fancy"] }
toml = "1.1.2"
unicode-width = "0.2.2"
