[package]
name = "sacrament"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
crossterm = "0.29.0"
libc = "0.2.185"
notify = "8.2.0"
portable-pty = "0.9.0"
ratatui = "0.30.0"
serde = { version = "1.0.228", features = ["derive"] }
syntect = { version = "5.3.0", default-features = false, features = ["default-syntaxes", "parsing", "regex-fancy"] }
toml = "1.1.2"
unicode-width = "0.2.2"
vt100 = "0.16.2"
